--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "e2e": "cypress run"
+    "e2e": "cypress run",
+    "ci:test": "react-scripts test --watchAll=false && start-server-and-test start http-get://0.0.0.0:3001 e2e"
   },
   "eslintConfig": {
     "extends": [
@@ -59,6 +60,7 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.20",
+    "start-server-and-test": "^1.15.2",
     "tailwindcss": "^3.2.4"
   }
 }
