--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,7 @@
   "env": {
     "es2021": true,
     "node": true,
-    "cypress/globlas": true
+    "cypress/globals": true
   },
   "extends": ["plugin:react/recommended", "airbnb"],
   "overrides": [],
